[package]
name = "block-subscription-test"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-provider = { version = "1.0", features = ["reqwest", "reqwest-rustls-tls", "ws"] }
alloy-rpc-types = { version = "1.0", features = ["eth"] }
anyhow = "1"
env_logger = "0.11.8"
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "process"] }
tracing = "0.1"
